--- a/gallerie/package.json
+++ b/gallerie/package.json
@@ -9,7 +9,10 @@
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "three": "^0.94.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "buildpacks": [
     {
@@ -20,6 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --trailing-comma=all --use-tabs=true --semi=false --write \"src/**/**/*.js\""
   }
 }
